test/Fail/Issue2024-data.err
Issue2024-data.agda:3.12-15: error: [NotInScope]
Not in scope:
  Foo
  at Issue2024-data.agda:3.12-15
when scope checking Foo
